--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- Normalize -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
 	<!-- Google fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<!-- My styles -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -81,8 +81,8 @@
 				</section>
 
 				<form>
-					<input type="button" class='button' id='send' value='Przelicz'>
-					<input type="button" class='button' id='clear' value='Wyczysc'>
+					<input type="button" class='special_button' id='send' value='Przelicz'>
+					<input type="button" class='special_button' id='clear' value='Wyczysc'>
 				</form>
 			</div>
 		</div>
